--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -13,8 +13,8 @@
 // ------------------------------------------------------------------------------
 @import "compass/css3";
 @import "compass/utilities";
-
 @import "font-awesome/scss/font-awesome";
+@import "susy";
 
 // Fonts
 // ------------------------------------------------------------------------------
