--- a/app/styles/quarks/_forms.scss
+++ b/app/styles/quarks/_forms.scss
@@ -2,7 +2,7 @@ label {
 	display: block;
 	width: 100%;
 	text-align: left;
-	font-family: $secondary_font;
+	font-family: $header-font;
 	text-transform: uppercase;
 }
 
