--- a/app/styles/atoms/_buttons.scss
+++ b/app/styles/atoms/_buttons.scss
@@ -1,7 +1,7 @@
 #send-mail {
 	background-color: $white;
 	padding: 0.8em;
-	font: 1.7em/1em $secondary_font;
+	font: 1.7em/1em $header-font;
 	border: 1px solid $dark-grey-on-dark;
 	text-transform: uppercase;
 	overflow: hidden;
