--- a/app/styles/molecules/_nav.scss
+++ b/app/styles/molecules/_nav.scss
@@ -2,8 +2,7 @@ nav {
 	position: fixed;
 	top: 0;
 	width: 100%;
-	height: 0.5em;
-	@include box-sizing(border-box);
+	height: $small-grid-spacing;
 	z-index: 1;
 
 	&, ul {
@@ -20,19 +19,18 @@ nav {
 		padding: 0.2em 1em;
 
 		@media #{$small} {
-			margin: 0 2em 0 0;
-			padding: 0.5em 1em;
-			float: right;
+			@include omega;
+			padding: $small-grid-spacing $base-grid-spacing;
 		}
 
 		li {
 			display: inline-block;
-			padding: 1em 2%;
+			padding: $base-grid-spacing 2%;
 			cursor: pointer;
 			text-transform: lowercase;
 
 			@media #{$small} {
-				padding: 0.5em 1em;
+				padding: $small-grid-spacing $base-grid-spacing;
 			}
 		}
 	}
