--- a/app/styles/templates/__scaffolding.scss
+++ b/app/styles/templates/__scaffolding.scss
@@ -1,3 +1,5 @@
+@include border-box-sizing;
+
 html, body {
 	height: 100%;
 	width: 100%;
@@ -10,10 +12,6 @@ html, body {
 	}
 }
 
-#container {
-	padding: 0;
-
-	@media #{$small} {
-		padding: 0 5%;
-	}
+.container {
+	@include container;
 }
