Transitioned some elements to using Susy

--- a/app/styles/atoms/_buttons.scss
+++ b/app/styles/atoms/_buttons.scss
@@ -44,7 +44,7 @@
 			top: 0;
 		}
 	}
-	.container {
+	.send-mail--states {
 		position: relative;
 	}
 	.step1-text, .step2-text, .sending-text, .sent-text {
