--- a/app/styles/molecules/_portfolio.scss
+++ b/app/styles/molecules/_portfolio.scss
@@ -4,14 +4,16 @@
 	h2 {
 		background-color: $light-grey-on-light;
 	}
+	.items {
+		padding-top: 3em;
+	}
 }
 
 .portfolio-item {
+	@include span-columns(4);
+	@include nth-omega(3n);
 	overflow: hidden;
-	padding: 5% 1% 0;
-	float: left;
-	width: 100%;
-	@include box-sizing(border-box);
+	clear: right;
 
 	.content {
 		padding: 2em 0;
@@ -31,61 +33,6 @@
 			font-style: italic;
 			font-size: 0.8em;
 			padding: 0 20%;
-		}
-	}
-}
-
-@media #{$small} {
-	.portfolio-item {
-		width: 50%;
-
-		&:nth-of-type(2n + 1) {
-			clear: both;
-
-			&:nth-last-child(1) {
-				width: 100%;
-
-				.content {
-					width: 50%;
-				}
-			}
-		}
-	}
-}
-
-@media #{$medium} {
-	.portfolio-item {
-		width: 33%;
-
-		&:nth-of-type(2n + 1) {
-			clear: none;
-		}
-		&:nth-of-type(3n + 1) {
-			clear: both;
-
-			&:nth-last-child(1) {
-				width: 100%;
-
-				.content {
-					width: 33%;
-				}
-			}
-			&:nth-last-child(2) {
-				width: 50%;
-
-				.content {
-					width: 66%;
-				}
-			}
-		}
-		&:nth-of-type(3n + 2) {
-			&:nth-last-child(1) {
-				width: 50%;
-
-				.content {
-					width: 66%;
-				}
-			}
 		}
 	}
 }
