Change path of font-awesome fonts to absolute

--- a/app/styles/_config.scss
+++ b/app/styles/_config.scss
@@ -40,7 +40,7 @@ $header-font: Museo, serif;
 $base-font-size: 16px;
 $small-font-size: 12px;
 
-$fa-font-path: "../bower_components/font-awesome/fonts";
+$fa-font-path: "/bower_components/font-awesome/fonts";
 
 /////// Config defaults for buttons ///////
 // -----------------------------------------------------------------------------
