Increase top header padding

--- a/app/styles/molecules/_header.scss
+++ b/app/styles/molecules/_header.scss
@@ -1,6 +1,6 @@
 header {
 
-	padding-top: $grid-padding;
+	padding-top: $grid-padding * 3;
 	width: 100%;
 	background: image-url($header-background-uri);
 
