--- a/app/styles/molecules/_feed-item.scss
+++ b/app/styles/molecules/_feed-item.scss
@@ -29,6 +29,7 @@
 			float: left;
 			margin: 0 0 0 0.5em;
 			font-size: 0.8em;
+			padding: 0.1em 0.5em;
 		}
 		.original-author-image {
 			margin-left: 0.5em;
@@ -77,6 +78,7 @@
 
 		.commit {
 			overflow: hidden;
+			padding: 0.1em 0.5em;
 		}
 		.message {
 			margin: 0;
