--- a/app/styles/molecules/_github.scss
+++ b/app/styles/molecules/_github.scss
@@ -1,6 +1,12 @@
 #github {
 	.items {
-		@include span-columns(6);
-		@include isolate(4);
+		@include at-breakpoint($medium-layout) {
+			@include span-columns(8);
+			@include isolate(3);
+		}
+		@include at-breakpoint($large-layout) {
+			@include span-columns(6);
+			@include isolate(4);
+		}
 	}
 }
