--- a/app/styles/molecules/_mail-form.scss
+++ b/app/styles/molecules/_mail-form.scss
@@ -25,7 +25,7 @@
 		width: 100%;
 		height: 100%;
 		padding: 25%;
-		background-color: rgba(0,0,0,0.7);
+		background-color: rgba($black, 0.7);
 		@include box-sizing(border-box);
 
 		#recaptcha_response_field {
@@ -38,7 +38,7 @@
 	}
 }
 
-@media #{$small} {
+@include at-breakpoint($small-layout) {
 	#mail-form {
 		label {
 			float: left;
