Remove susy shim file

--- a/css/main.scss
+++ b/css/main.scss
@@ -9,7 +9,7 @@ layout: null
 @import "config";
 
 // Vendors
-@import "susy";
+@import "../bower_components/susy/sass/susy";
 
 // Utils
 @import "utils/normalize";
