--- a/_sass/molecules/_post.scss
+++ b/_sass/molecules/_post.scss
@@ -9,7 +9,7 @@
   &--header {
     display: flex;
     flex-wrap: wrap;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
     flex-direction: column;
 
     @include susy-breakpoint($tiny-screen) {
@@ -42,7 +42,8 @@
   }
   &--content {
     h2 {
-      margin-bottom: 0.75rem;
+      margin-top: 2rem;
+      margin-bottom: 1rem;
     }
   }
 }
