--- a/_sass/atoms/_site-nav.scss
+++ b/_sass/atoms/_site-nav.scss
@@ -3,6 +3,7 @@
   margin-bottom: 2rem;
 
   &--items {
+    padding-left: 0;
     list-style-type: disc;
     display: flex;
     justify-content: center;
