--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,14 +1,14 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="">
+  <meta name="description" content="My name is Joseph Spens, I am a Full Stack Technical Lead and Architect currently at Quartet in New York City. I'm also the lead organizer of Space Apps NYC.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:title" content="Joseph Spens">
   <meta property="og:image" content="{{ "/assets/logo_90x90.png" | prepend: site.baseurl }}">
-  <meta property="og:url" content="http://spens.us/">
-  <meta property="og:description" content="">
+  <meta property="og:url" content="http://josephspens.nyc/">
+  <meta property="og:description" content="My name is Joseph Spens, I am a Full Stack Technical Lead and Architect currently at Quartet in New York City. I'm also the lead organizer of Space Apps NYC.">
   <meta itemprop="name" content="Joseph Spens">
-  <meta itemprop="description" content="">
+  <meta itemprop="description" content="My name is Joseph Spens, I am a Full Stack Technical Lead and Architect currently at Quartet in New York City. I'm also the lead organizer of Space Apps NYC.">
   <meta itemprop="image" content="{{ "/assets/logo_90x90.png" | prepend: site.baseurl }}">
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
