--- a/_sass/molecules/_site-footer.scss
+++ b/_sass/molecules/_site-footer.scss
@@ -13,6 +13,7 @@
   .contact-list {
     display: flex;
     justify-content: center;
+    align-items: center;
     margin-bottom: 1rem;
 
     li {
