--- a/css/main.scss
+++ b/css/main.scss
@@ -29,6 +29,7 @@ layout: null
 @import "atoms/site-title";
 
 // Molecules
+@import "molecules/home";
 @import "molecules/post";
 @import "molecules/post-list";
 @import "molecules/site-footer";
