--- a/_sass/molecules/_post.scss
+++ b/_sass/molecules/_post.scss
@@ -41,11 +41,24 @@
     }
   }
   &--content {
+    h1 {
+      font-size: 2.5em;
+    }
+
     h2 {
       margin-top: 2rem;
       margin-bottom: 1rem;
+      font-size: 2em;
     }
     
+    h3 {
+      font-size: 1.5em; 
+    }
+    
+    h4 {
+      font-size: 1.2em;
+    }
+
     ul, ol {
       margin-bottom: 1rem;
     }
