--- a/_sass/molecules/_post.scss
+++ b/_sass/molecules/_post.scss
@@ -42,9 +42,11 @@
     }
   }
   &--content {
+    h1, h2, h3, h4, h5, h6 {
+      margin: 1em 0 0.5em;
+    }
+
     h2 {
-      margin-top: 2rem;
-      margin-bottom: 1rem;
       font-size: 2em;
     }
     
