Update proof of concept

--- a/_sass/molecules/_post.scss
+++ b/_sass/molecules/_post.scss
@@ -8,7 +8,6 @@
 
   &--header {
     display: flex;
-    flex-wrap: wrap;
     margin-bottom: 2rem;
     flex-direction: column;
 
@@ -28,6 +27,7 @@
   }
   &--meta {
     margin: 0;
+    white-space: nowrap;
   }
   &--back {
     @include clean-link;
