--- a/_sass/atoms/_site-nav.scss
+++ b/_sass/atoms/_site-nav.scss
@@ -3,22 +3,27 @@
   margin-bottom: 2rem;
 
   &--items {
-    padding-left: 0;
-    list-style-type: disc;
+    list-style-type: none;
     display: flex;
     justify-content: center;
+    flex-direction: column;
 
     @include susy-breakpoint($tiny-screen) {
       justify-content: flex-start;
+      padding-left: 0;
+      list-style-type: disc;
+      flex-direction: row;
     }
   }
   &--item {
     margin: 0 0.5em 0 1em;
     color: $divider-color;
 
-    &:first-child {
-      list-style-type: none;
-      margin-left: 0;
+    @include susy-breakpoint($tiny-screen) {
+      &:first-child {
+        list-style-type: none;
+        margin-left: 0;
+      }
     }
   }
 }
